add class selector tooltips