@@ -3,7 +3,7 @@ package cuchaz.enigma.gui.dialog;
 import cuchaz.enigma.gui.Gui;
 import cuchaz.enigma.gui.config.UiConfig;
 import cuchaz.enigma.gui.stats.StatsGenerator;
-import cuchaz.enigma.gui.stats.StatsMember;
+import cuchaz.enigma.gui.stats.StatType;
 import cuchaz.enigma.gui.stats.StatsResult;
 import cuchaz.enigma.gui.util.GridBagConstraintsBuilder;
 import cuchaz.enigma.gui.util.ScaleUtil;
@@ -13,9 +13,8 @@ import java.awt.Container;
 import java.awt.Dimension;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.EnumMap;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -30,16 +29,13 @@ public class StatsDialog {
 	public static void show(Gui gui) {
 		ProgressDialog.runOffThread(gui.getFrame(), listener -> {
 			final StatsGenerator statsGenerator = new StatsGenerator(gui.getController().getProject());
-			final Map<StatsMember, StatsResult> results = new EnumMap<>(StatsMember.class);
-			for (StatsMember member : StatsMember.values()) {
-				results.put(member, statsGenerator.generate(listener, Collections.singleton(member), "", false));
-			}
+			StatsResult result = statsGenerator.generate(listener, Set.of(StatType.values()), "", false);
 
-			SwingUtilities.invokeLater(() -> show(gui, results, ""));
+			SwingUtilities.invokeLater(() -> show(gui, result, ""));
 		});
 	}
 
-	public static void show(Gui gui, Map<StatsMember, StatsResult> results, String packageName) {
+	public static void show(Gui gui, StatsResult result, String packageName) {
 		// init frame
 		JDialog dialog = new JDialog(gui.getFrame(), packageName.isEmpty() ? I18n.translate("menu.file.stats.title") : I18n.translateFormatted("menu.file.stats.title_filtered", packageName), true);
 		Container contentPane = dialog.getContentPane();
@@ -47,23 +43,20 @@ public class StatsDialog {
 
 		GridBagConstraintsBuilder cb = GridBagConstraintsBuilder.create().insets(2);
 
-		Map<StatsMember, JCheckBox> checkboxes = new EnumMap<>(StatsMember.class);
+		Map<StatType, JCheckBox> checkboxes = new EnumMap<>(StatType.class);
 
-		int[] i = {0};
-		results.entrySet().stream().sorted(Map.Entry.comparingByKey()).forEach(e -> {
-			StatsMember m = e.getKey();
-			StatsResult result = e.getValue();
-
-			JCheckBox checkBox = new JCheckBox(I18n.translate("type." + m.name().toLowerCase(Locale.ROOT)));
-			checkboxes.put(m, checkBox);
+		final int[] i = {0};
+		result.getTypes().stream().sorted(Comparator.comparing(StatType::getName)).forEach(type -> {
+			JCheckBox checkBox = new JCheckBox(type.getName());
+			checkboxes.put(type, checkBox);
 			contentPane.add(checkBox, cb.pos(0, i[0]).weightX(1.0).anchor(GridBagConstraints.WEST).build());
 
 			GridBagConstraintsBuilder labels = cb.anchor(GridBagConstraints.EAST);
 
-			contentPane.add(new JLabel(Integer.toString(result.getMapped())), labels.pos(1, i[0]).build());
+			contentPane.add(new JLabel(Integer.toString(result.getMapped(type))), labels.pos(1, i[0]).build());
 			contentPane.add(new JLabel("/"), labels.pos(2, i[0]).build());
-			contentPane.add(new JLabel(Integer.toString(result.getTotal())), labels.pos(3, i[0]).build());
-			contentPane.add(new JLabel(String.format("%.2f%%", result.getPercentage())), labels.pos(4, i[0]).build());
+			contentPane.add(new JLabel(Integer.toString(result.getMappable(type))), labels.pos(3, i[0]).build());
+			contentPane.add(new JLabel(String.format("%.2f%%", result.getPercentage(type))), labels.pos(4, i[0]).build());
 
 			i[0]++;
 		});
@@ -72,11 +65,11 @@ public class StatsDialog {
 
 		// show top-level package option
 		JLabel topLevelPackageOption = new JLabel(I18n.translate("menu.file.stats.top_level_package"));
-		contentPane.add(topLevelPackageOption, cb1.pos(0, results.size() + 1).build());
+		contentPane.add(topLevelPackageOption, cb1.pos(0, result.getTypes().size() + 1).build());
 
 		JTextField topLevelPackage = new JTextField();
 		topLevelPackage.setText(UiConfig.getLastTopLevelPackage());
-		contentPane.add(topLevelPackage, cb1.pos(0, results.size() + 2).fill(GridBagConstraints.HORIZONTAL).build());
+		contentPane.add(topLevelPackage, cb1.pos(0, result.getTypes().size() + 2).fill(GridBagConstraints.HORIZONTAL).build());
 
 		// Show filter button
 		JButton filterButton = new JButton(I18n.translate("menu.file.stats.filter"));
@@ -87,20 +80,17 @@ public class StatsDialog {
 				UiConfig.save();
 
 				final StatsGenerator statsGenerator = new StatsGenerator(gui.getController().getProject());
-				final Map<StatsMember, StatsResult> statResults = new EnumMap<>(StatsMember.class);
-				for (StatsMember member : StatsMember.values()) {
-					statResults.put(member, statsGenerator.generate(listener, Collections.singleton(member), UiConfig.getLastTopLevelPackage(), false));
-				}
+				StatsResult statResult =  statsGenerator.generate(listener, Set.of(StatType.values()), UiConfig.getLastTopLevelPackage(), false);
 
-				SwingUtilities.invokeLater(() -> show(gui, statResults, UiConfig.getLastTopLevelPackage()));
+				SwingUtilities.invokeLater(() -> show(gui, statResult, UiConfig.getLastTopLevelPackage()));
 			});
 		});
-		contentPane.add(filterButton, cb1.pos(0, results.size() + 3).anchor(GridBagConstraints.EAST).build());
+		contentPane.add(filterButton, cb1.pos(0, result.getTypes().size() + 3).anchor(GridBagConstraints.EAST).build());
 
 		// show synthetic members option
 		JCheckBox syntheticParametersOption = new JCheckBox(I18n.translate("menu.file.stats.synthetic_parameters"));
 		syntheticParametersOption.setSelected(UiConfig.shouldIncludeSyntheticParameters());
-		contentPane.add(syntheticParametersOption, cb1.pos(0, results.size() + 4).build());
+		contentPane.add(syntheticParametersOption, cb1.pos(0, result.getTypes().size() + 4).build());
 
 		// show generate button
 		JButton button = new JButton(I18n.translate("menu.file.stats.generate"));
@@ -115,7 +105,7 @@ public class StatsDialog {
 			generateStats(gui, checkboxes, topLevelPackage.getText(), syntheticParametersOption.isSelected());
 		});
 
-		contentPane.add(button, cb1.pos(0, results.size() + 5).weightY(1.0).anchor(GridBagConstraints.SOUTHWEST).build());
+		contentPane.add(button, cb1.pos(0, result.getTypes().size() + 5).weightY(1.0).anchor(GridBagConstraints.SOUTHWEST).build());
 
 		// add action listener to each checkbox
 		checkboxes.forEach((key, value) -> value.addActionListener(action -> {
@@ -136,9 +126,9 @@ public class StatsDialog {
 		dialog.setVisible(true);
 	}
 
-	private static void generateStats(Gui gui, Map<StatsMember, JCheckBox> checkboxes, String topLevelPackage, boolean includeSynthetic) {
+	private static void generateStats(Gui gui, Map<StatType, JCheckBox> checkboxes, String topLevelPackage, boolean includeSynthetic) {
 		// get members from selected checkboxes
-		Set<StatsMember> includedMembers = checkboxes
+		Set<StatType> includedMembers = checkboxes
 				.entrySet()
 				.stream()
 				.filter(entry -> entry.getValue().isSelected())
